@startuml

title __USER's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.user {
        class Developer {
            - reservations : ArrayList<Reservation>
            + Developer()
            + getBreakTime()
            - setBreakTime()
            + addBreakTime()
            + firstAvailableTime()
            + getType()
            + addReservation()
            - getReservations()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.user {
        class OperationNotPermittedException {
            + OperationNotPermittedException()
        }
      }
    }
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.user {
        class ProjectManager {
            + ProjectManager()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.user {
        abstract class User {
            - name : String
            - password : String
            + User()
            + getName()
            - setName()
            + getPassword()
            - setPassword()
            + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.user {
        class UserManager {
            - users : List<User>
            + UserManager()
            - getUser()
            + getCurrentUser()
            + hasCurrentUser()
            - setCurrentUser()
            + createUser()
            + getUserTypes()
            - createDeveloper()
            - createProjectManager()
            + login()
            + logout()
        }
      }
    }
  }
  

  Developer -up-|> Resource
  Developer -up-|> User
  Developer o-- AvailabilityPeriod : breakTime
  Developer o-- ResourceType : type
  OperationNotPermittedException +-down- WrappedPrintWriter
  OperationNotPermittedException +-down- WrappedPrintStream
  OperationNotPermittedException +-down- PrintStreamOrWriter
  OperationNotPermittedException +-down- SentinelHolder
  ProjectManager -up-|> User
  User -up-|> Entity
  UserManager o-- User : currentUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
